<resources>
    <string name="app_name">MascotasGram</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Estas son las variables nuevas -->
    <string name="menuContacto">Contacto</string>
    <string name="menuAcerca">Acerca de</string>

    <!-- Strings menu contactos -->
    <string name="tiMensaje">Mensaje</string>
    <string name="tiEmail">E-mail destinatario</string>
    <string name="tiNombre">Nombre</string>
    <string name="tiPassword">Contraseña</string>
    <string name="enviarBoton">Enviar comentario</string>

    <!-- Strings de los textos del Layout -->
    <string name="tvAcerca">Información sobre el desarrollador:</string>
    <string name="tvTexto">Mi nombre es Mathias Alvez y soy el creador de esta hermosa y funcional aplicación</string>

    <!-- String de los cardview -->
    <string name="pnombre">Malebo</string>
    <string name="plikes">8</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>